comment the bddebian public boxes and strauss

--- a/public_hurd_boxen.mdwn
+++ b/public_hurd_boxen.mdwn
@@ -21,25 +21,25 @@ image|hurd/running/qemu]].
 
 [[!table class="table_style_1" data="""
 "Hoster","Name","Distribution","Machine Specs","Comments"
-"[[bddebian]]","blubber","Debian GNU/Hurd","Celeron 2.2 GHz; 222 MiB","Xen domU on [[zenhost]]; for experimental stuff; deactivated until needed again (apart from [[tschwinge]], only [[scolobb]] has an account, but is not active at the moment)"
-"[[bddebian]]","clubber","Debian GNU/Hurd","PIII 1 GHz; 384 MiB"
-"[[bddebian]]","flubber","Debian GNU/Hurd","Celeron 2.2 GHz; 666 MiB","Xen domU on [[zenhost]]"
-"[[bddebian]]","snubber","Debian GNU/Hurd","Celeron 2.2 GHz; 243 MiB","Xen domU on [[zenhost]]"
-"[[bddebian]]","gnubber","Debian GNU/Hurd","PII 733 MHz; 384 MiB"
-"[[bddebian]]","goober","Debian GNU/Hurd","?"
-"[[bddebian]]","grubber","Debian GNU/Hurd","Celeron 2.2 GHz; 554 MiB","Xen domU on [[zenhost]]; for experimental stuff"
-"[[bddebian]]","[[zenhost]]","Debian GNU/Linux","Celeron 2.2 GHz","Xen dom0 for several hosts"
+[//]: # ("[[bddebian]]","blubber","Debian GNU/Hurd","Celeron 2.2 GHz; 222 MiB","Xen domU on [[zenhost]]; for experimental stuff; deactivated until needed again (apart from [[tschwinge]], only [[scolobb]] has an account, but is not active at the moment)")
+[//]: # ("[[bddebian]]","clubber","Debian GNU/Hurd","PIII 1 GHz; 384 MiB")
+[//]: # ("[[bddebian]]","flubber","Debian GNU/Hurd","Celeron 2.2 GHz; 666 MiB","Xen domU on [[zenhost]]")
+[//]: # ("[[bddebian]]","snubber","Debian GNU/Hurd","Celeron 2.2 GHz; 243 MiB","Xen domU on [[zenhost]]")
+[//]: # ("[[bddebian]]","gnubber","Debian GNU/Hurd","PII 733 MHz; 384 MiB")
+[//]: # ("[[bddebian]]","goober","Debian GNU/Hurd","?")
+[//]: # ("[[bddebian]]","grubber","Debian GNU/Hurd","Celeron 2.2 GHz; 554 MiB","Xen domU on [[zenhost]]; for experimental stuff")
+[//]: # ("[[bddebian]]","[[zenhost]]","Debian GNU/Linux","Celeron 2.2 GHz","Xen dom0 for several hosts")
 "[[sceen]]","darnassus","Debian GNU/Hurd","Xeon E5-1620 3.6 GHz, 1.8 GiB","KVM guest on dalaran; public Hurd box; [web server](http://darnassus.sceen.net/)"
-"[[sceen]]","ironforge","Debian GNU/Hurd","Xeon E5-1620 3.6 GHz, 1.8 GiB","KVM guest on dalaran; Debian buildd"
+"[[sceen]]","ironforge","Debian GNU/Hurd","Xeon E5-1620 3.6 GHz, 1.8 GiB","KVM guest on dalaran; Debian buildd only, no public access"
 "[[sceen]]","exodar","Debian GNU/Hurd","Xeon E5-1620 3.6 GHz, 1.8 GiB","KVM guest on dalaran; Debian porterbox, all Debian Developers have access"
 "[[sceen]]","dalaran","Debian GNU/Linux","Xeon E5-1620 3.6 GHz, 64 GiB ECC","KVM host"
-"Debian","strauss","Debian GNU/Hurd","Sempron 2800+","all Debian Developers have access"
+[//]: # ("Debian","strauss","Debian GNU/Hurd","Sempron 2800+","all Debian Developers have access")
 "[libav](http://www.libav.org/)","[x86_32-hurd-gcc-4.7](http://fate.libav.org/x86_32-hurd-gcc-4.7)","Debian GNU/Hurd","","libav instance of the [FATE Automated Test Environment](http://www.libav.org/fate.html)"
 """]]
 
-If you are a Debian Developer, you can log into the exodar or strauss machines
+If you are a Debian Developer, you can log into the exodar machines
 with your DD account, your public ssh keys are already there.  To request a
-non-DD account on them, please contact admin@{exodar,strauss}.debian.net, with
+non-DD account on them, please contact admin@exodar.debian.net, with
 your Alioth account name and a public ssh key.
 
 To request an account on the *[[bddebian]]* or *[[sceen]]* machines, please
@@ -54,45 +54,45 @@ Also, add the following stanza to the `~/.ssh/config` file of the machine
 you're connecting from.
 
     # Stanza from <http://www.gnu.org/software/hurd/public_hurd_boxen.html>,
-    # 2011-11-06.
+    # 2016-06-13.
 
-    Host blubber.bddebian.com blubber
-      HostName blubber.bddebian.com
-    
-    Host clubber.bddebian.com clubber
-      HostName clubber.bddebian.com
-      Port 2251
-    
-    Host flubber.bddebian.com flubber
-      HostName flubber.bddebian.com
-      Port 2250
-    
-    Host gnubber.bddebian.com gnubber
-      HostName gnubber.bddebian.com
-      Port 2254
-    
-    Host goober.bddebian.com goober
-      HostName goober.bddebian.com
-      Port 2255
-    
-    Host grubber.bddebian.com grubber
-      HostName grubber.bddebian.com
-    
-    Host snubber.bddebian.com snubber
-      HostName snubber.bddebian.com
-    
-    Host zenhost.bddebian.com zenhost
-      HostName zenhost.bddebian.com
-      Port 2260
-    
-    Host blubber.bddebian.com blubber grubber.bddebian.com grubber snubber.bddebian.com snubber
-      # Tunnel through zenhost.
-      ProxyCommand ssh zenhost exec socat - TCP4:%h:%p
-    
-    Host *.bddebian.com blubber clubber flubber gnubber goober grubber snubber zenhost
-      # Don't worry about the IP address (dial-up connection).
-      CheckHostIP no
-      User [user name]
+[//]: # (    Host blubber.bddebian.com blubber)
+[//]: # (      HostName blubber.bddebian.com)
+[//]: # (   )
+[//]: # (    Host clubber.bddebian.com clubber)
+[//]: # (      HostName clubber.bddebian.com)
+[//]: # (      Port 2251)
+[//]: # (   )
+[//]: # (    Host flubber.bddebian.com flubber)
+[//]: # (      HostName flubber.bddebian.com)
+[//]: # (      Port 2250)
+[//]: # (   )
+[//]: # (    Host gnubber.bddebian.com gnubber)
+[//]: # (      HostName gnubber.bddebian.com)
+[//]: # (      Port 2254)
+[//]: # (   )
+[//]: # (    Host goober.bddebian.com goober)
+[//]: # (      HostName goober.bddebian.com)
+[//]: # (      Port 2255)
+[//]: # (   )
+[//]: # (    Host grubber.bddebian.com grubber)
+[//]: # (      HostName grubber.bddebian.com)
+[//]: # (   )
+[//]: # (    Host snubber.bddebian.com snubber)
+[//]: # (      HostName snubber.bddebian.com)
+[//]: # (   )
+[//]: # (    Host zenhost.bddebian.com zenhost)
+[//]: # (      HostName zenhost.bddebian.com)
+[//]: # (      Port 2260)
+[//]: # (   )
+[//]: # (    Host blubber.bddebian.com blubber grubber.bddebian.com grubber snubber.bddebian.com snubber)
+[//]: # (      # Tunnel through zenhost.)
+[//]: # (      ProxyCommand ssh zenhost exec socat - TCP4:%h:%p)
+[//]: # (   )
+[//]: # (    Host *.bddebian.com blubber clubber flubber gnubber goober grubber snubber zenhost)
+[//]: # (      # Don't worry about the IP address (dial-up connection).)
+[//]: # (      CheckHostIP no)
+[//]: # (      User [user name])
     
     Host darnassus.sceen.net darnassus
       HostName darnassus.sceen.net
