Add more tricks for chroots

--- a/hurd/running/chroot.mdwn
+++ b/hurd/running/chroot.mdwn
@@ -45,3 +45,5 @@ programs inside the chroot need to be able to access them:
     # settrans chroot/tmp /hurd/firmlink /tmp
     # settrans -c chroot/var/lib/dbus /hurd/firmlink /var/lib/dbus
     # settrans -c chroot/run/dbus /hurd/firmlink /run/dbus
+    # settrans -kp chroot/proc /hurd/firmlink /proc
+    # settrans -c $CHROOT/$HOME/.dbus /hurd/firmlink /$HOME/.dbus
