--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -180,7 +180,7 @@ I'll have to think about it some more.
 * Install qemu-kvm via your distros packages.
 * Download the [qemu image](http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.tar.gz): `wget http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.tar.gz`
 * Unpack it: `tar xf debian-hurd.img.tar.gz`
-* Run it: `qemu-kvm -m 512 -drive cache=writeback,file=debian-hurd.img` # …irq… is a currently necessary fix due to some changes in Linux. Optionally use `--curses` to keep your keyboard layout. If need be modprobe kvm_amd, kvm intel and kvm to get kvm support (which is much, much faster). See also: [kvm FAQ](http://www.linux-kvm.org/page/FAQ).
+* Run it: `qemu-kvm -m 512 -drive cache=writeback,file=debian-hurd.img` # Optionally use `--curses` to keep your keyboard layout. If need be modprobe kvm_amd, kvm intel and kvm to get kvm support (which is much, much faster). See also: [kvm FAQ](http://www.linux-kvm.org/page/FAQ).
 * login as root
 * `apt-get update`
 * `apt-get install -y git mercurial emacs vim`
