--- a/faq/xserver-common.mdwn
+++ b/faq/xserver-common.mdwn
@@ -17,6 +17,6 @@ This happens because currently there is no way to detect console users.
 
 On Debian GNU/Hurd systems, you need to run
 
-    # dpkg-reconfigure x11-common
+    # dpkg-reconfigure xserver-xorg-legacy
 
 and select `Anybody` for starting X.
