Let's be litteral

--- a/faq/how_many_developers.mdwn
+++ b/faq/how_many_developers.mdwn
@@ -17,7 +17,7 @@ few?"]]
 
 # How Many Developers?
 
-One handful works on the core of the system in their free time, and another
+Litteraly only one handful works on the core of the system in their free time, and another
 handful helps with [[Debian GNU/Hurd|hurd/running/debian]] and
 [[hurd/running/Arch_Hurd]] packaging.  Also, an additional handful of former
 developers are still available for answering technical questions, but are not
