--- a/faq/64-bit.mdwn
+++ b/faq/64-bit.mdwn
@@ -16,3 +16,6 @@ There are currently no plan for 64-bit userland, but there are plans for 64-bit
 kernelland with 32-bit userland, which will notably permit to efficiently make
 use of more than 2 GiB memory and provide 4 GiB userland addressing space.
 Work on this is currently in branches for GNU Mach.
+
+That being said, you can always run a 32-bit version on a 64-bit machine, it
+just works, processes are just limited to a couple GiB available memory.
