Add ghm 2016 meeting

--- a/community/meetings.mdwn
+++ b/community/meetings.mdwn
@@ -17,6 +17,7 @@ License|/fdl]]."]]"""]]
 
 # Past
 
+  * [[GNU Hackers Meeting, 2016, Rennes|ghm2016]]
   * [[FOSDEM_2016]]
   * [[DebConf15]]
   * [[FOSDEM_2015]]
