Complete commit 1f6eff (Drop -no-kvm-irqchip)
we don't have the issue without it any more, and it actually seems to pose other problems

--- a/hurd/running/qemu.mdwn
+++ b/hurd/running/qemu.mdwn
@@ -95,21 +95,7 @@ Check that the kvm module is loaded:
 
 More info on kvm at: http://www.linux-kvm.org/page/FAQ
 
-If your machine supports hardware acceleration, you should really use the kvm variant of qemu, as it speeds things quite a lot. Note however that kvm tends to make assumptions when accelerating things in the linux kernel, you may need some -no-kvm-something option. At the moment in Debian you need to pass
-
-    -no-kvm-irqchip
-
-to the command line, see below, if you are running Linux kernels 2.6.37 or 2.6.38 else IRQs may hang sooner or later. The kvm irq problems will be solved in kernel 2.6.39. 
-
-IRC, freenode, #hurd, 2012-08-29:
-
-    <braunr> youpi: do you remember which linux versions require the
-      -no-kvm-irqchip option ?
-    <braunr> your page indicates 2.6.37-38, but i'm seeing weird things on
-      2.6.32
-    <braunr> looks like a good thing to use that option all the time actually
-    <gnu_srs> seems like kvm -h says: -no-kvm-irqchip and man kvm says:
-      -machine kernel_irqchip=off
+If your machine supports hardware acceleration, you should really use the kvm variant of qemu, as it speeds things quite a lot.
 
 # HAP/EPT/NPT acceleration
 
