--- a/open_issues/libpthread.mdwn
+++ b/open_issues/libpthread.mdwn
@@ -1061,7 +1061,7 @@ Most of the issues raised on this page has been resolved, a few remain.
     <gnu_srs> kvm -m 1024 -net nic,model=rtl8139 -net
       user,hostfwd=tcp::5562-:22 -drive
       cache=writeback,index=0,media=disk,file=hurd-experimental.img -vnc :6
-      -cdrom isos/netinst_2012-07-15.iso -no-kvm-irqchip
+      -cdrom isos/netinst_2012-07-15.iso
     <braunr> what is the file system type where your disk image is stored ?
     <gnu_srs> ext3
     <braunr> and how much physical memory on the host ?
