--- a/hurd/running/chroot.mdwn
+++ b/hurd/running/chroot.mdwn
@@ -40,10 +40,18 @@ socket creation
 will actually happen in the root filesystem. To make things work correctly the
 programs inside the chroot need to be able to access them:
 
-    # settrans -kp chroot/servers /hurd/firmlink /servers
-    # settrans -kp chroot/dev /hurd/firmlink /dev
-    # settrans chroot/tmp /hurd/firmlink /tmp
-    # settrans -c chroot/var/lib/dbus /hurd/firmlink /var/lib/dbus
-    # settrans -c chroot/run/dbus /hurd/firmlink /run/dbus
-    # settrans -kp chroot/proc /hurd/firmlink /proc
+    # CHROOT=$PWD/chroot
+    # settrans -kp $CHROOT/servers /hurd/firmlink /servers
+    # settrans -kp $CHROOT/dev /hurd/firmlink /dev
+    # settrans $CHROOT/tmp /hurd/firmlink /tmp
+    # settrans -c $CHROOT/var/lib/dbus /hurd/firmlink /var/lib/dbus
+    # settrans -c $CHROOT/run/dbus /hurd/firmlink /run/dbus
+    # settrans -kp $CHROOT/proc /hurd/firmlink /proc
     # settrans -c $CHROOT/$HOME/.dbus /hurd/firmlink /$HOME/.dbus
+
+# Buildds
+
+Debian build daemons use a specialized script instead of debootstrap:
+
+    # mkdir ~/chroots
+    # /usr/share/sbuild/create-chroot sid
