more details about buildds

--- a/hurd/running/chroot.mdwn
+++ b/hurd/running/chroot.mdwn
@@ -55,3 +55,7 @@ Debian build daemons use a specialized script instead of debootstrap:
 
     # mkdir ~/chroots
     # /usr/share/sbuild/create-chroot sid
+
+They also use sbuild to start the build:
+
+    # sbuild foo_1.2.3-1
