--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -25,6 +25,10 @@ This page lists the few packages whose build makes the Debian buildd box crash a
 
   * rsyslog
 
+* breaks ext2fs
+
+  * icedove
+
 * ext2fs gets stuck
 
   * emacs24
