Give hint how to fix glibc stack unwinding from kernel

--- a/microkernel/mach/gnumach/debugging.mdwn
+++ b/microkernel/mach/gnumach/debugging.mdwn
@@ -53,9 +53,7 @@ To examine the backtrace of some given thread, use
 
     show all thread/u
 
-to get the whole listing of all tasks and threads. You can then use trace/t or trace/tu to trace a specific thread.
-
-Unfortunately, userland and kernelland use the same range of addresses, so one can not get userland traces easily. The Xen port uses different ranges, and in that case one can use trace/u to also get the userland trace.
+to get the whole listing of all tasks and threads.  You can then use trace/t or trace/tu to trace a specific thread.  gcc however uses the frame pointer as a normal register unless `-fno-omit-frame-pointer` is given.  It can thus be useful to rebuild glibc with that option, by adding `extra_cflags = -fno-omit-frame-pointer` in `glibc/debian/sysdeps/hurd-i386.mk`
 
 To examine a variable, use nm /boot/gnumach to get the address of the variable (e.g. 0x123400), and use
 
