Use symbolic name

--- a/hurd/running/chroot.mdwn
+++ b/hurd/running/chroot.mdwn
@@ -54,7 +54,7 @@ programs inside the chroot need to be able to access them:
 Debian build daemons use a specialized script instead of debootstrap:
 
     # mkdir ~/chroots
-    # /usr/share/sbuild/create-chroot sid
+    # /usr/share/sbuild/create-chroot unstable
 
 They also use sbuild to start the build:
 
