--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -29,6 +29,10 @@ This page lists the few packages whose build makes the Debian buildd box crash a
 
   * icedove
 
+* box gets stuck
+
+  * llvm-toolchain-3.7
+
 * ext2fs gets stuck
 
   * emacs24
