--- a/open_issues/increasing_bogus_port_at_boot.mdwn
+++ b/open_issues/increasing_bogus_port_at_boot.mdwn
@@ -23,4 +23,9 @@ When the ntpdate package is installed, one gets at boot something like:
 This is coming from the execution of the shell script
 /etc/network/if-up.d/ntpdate, whose stdout/stderr is on the Mach console, but
 part of which gets executed after getty starts on it. It happens that getty uses
-revoke() to revoke access to it from other programs, and thus the ntpdate shell scripts gets its stdout/stderr in a bogus state, which libc doesn't really cope with correctly.
+revoke() to revoke access to it from other programs, and thus the ntpdate shell
+scripts gets its stdout/stderr in a bogus state, which libc doesn't really cope
+with correctly.
+
+Commenting `c:23:respawn:/sbin/getty 38400 console` from `/etc/inittab` works
+around the issue (but removes the getty from the Mach console)
