create /dev/eth0m if needed

--- a/hurd/subhurd.mdwn
+++ b/hurd/subhurd.mdwn
@@ -81,7 +81,7 @@ subhurd.
 If you don't have a second network card, you can setup the eth-multiplexer
 to share one network card.  To do so, install the multiplexer
 
-    settrans /dev/eth0m /hurd/eth-multiplexer --interface=/dev/eth0
+    settrans -c /dev/eth0m /hurd/eth-multiplexer --interface=/dev/eth0
 
 Then configure your main Hurd system to use a virtual network
 interface (e.g. `/dev/eth0m/0`) instead.  On Debian/Hurd, this can be
