Document using debootstrap instead of crosshurd

--- a/hurd/subhurd.mdwn
+++ b/hurd/subhurd.mdwn
@@ -38,10 +38,11 @@ The system for the subhurd is a normal Hurd installation, which could just as
 well run standalone.  You can use any of the various possible installation
 methods, or reuse an existing installation if you already have several.  If
 using [[Debian_GNU/Hurd|running/debian]], the easiest is probably to use
-[[running/debian/crosshurd]], which you can run directly from your main Hurd to
-set up another Hurd on a different partition, without ever rebooting.  (You can
-run the `native-install` step from a chroot or already in a subhurd.)
+debootstrap as root:
 
+    mke2fs /dev/hd3s4
+    settrans -ca mnt /hurd/ext2fs /dev/hd3s4
+    debootstrap sid mnt/ http://httpredir.debian.org/debian
 
 ### IRC, freenode, #hurd, 2013-09-15
 
@@ -66,7 +67,7 @@ simply boot the subhurd as an unprivileged user by issuing
 
        boot /dev/hd0s6
 
-(Replace `hd0s6` by the name of your partition for the subhurd.)
+(Replace `hd0s6` by the name of your partition or backing file for the subhurd.)
 
 /!\ The partition must be unmounted (or mounted read-only) before you boot from
 it!
