use coherent partition names

--- a/hurd/subhurd.mdwn
+++ b/hurd/subhurd.mdwn
@@ -40,9 +40,10 @@ methods, or reuse an existing installation if you already have several.  If
 using [[Debian_GNU/Hurd|running/debian]], the easiest is probably to use
 debootstrap as root:
 
-    mke2fs /dev/hd3s4
-    settrans -ca mnt /hurd/ext2fs /dev/hd3s4
+    mke2fs /dev/hd0s6
+    settrans -ca mnt /hurd/ext2fs /dev/hd0s6
     debootstrap sid mnt/ http://httpredir.debian.org/debian
+    settrans -ga mnt
 
 ### IRC, freenode, #hurd, 2013-09-15
 
