there are sometimes remnants after debootstrap

--- a/hurd/subhurd.mdwn
+++ b/hurd/subhurd.mdwn
@@ -43,7 +43,7 @@ debootstrap as root:
     mke2fs /dev/hd0s6
     settrans -ca mnt /hurd/ext2fs /dev/hd0s6
     debootstrap sid mnt/ http://httpredir.debian.org/debian
-    settrans -ga mnt
+    settrans -fga mnt
 
 ### IRC, freenode, #hurd, 2013-09-15
 
