note that /dev/eth0 should be used to get it working

--- a/hurd/subhurd.mdwn
+++ b/hurd/subhurd.mdwn
@@ -113,7 +113,7 @@ proc server will kill all tasks belonging to the Subhurd.
 In the subhurd, you can do basically all the same things as in the main Hurd.
 
 You can even set up networking: Just invoke `settrans` on the
-`/servers/socket/2` as usual inside the subhurd, only using a different local
+`/servers/socket/2` as usual inside the subhurd, using `/dev/eth0`, only using a different local
 IP than in the main Hurd.  This way, the subhurd will be able to communicate to
 the outside world with its own IP -- allowing for example to do `apt-get`
 inside the subhurd, or to `ssh` directly into the subhurd.
